// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="withRouter-RetroAppBar--root-1"
>
  <header
    className="MuiPaper-root-12 MuiPaper-elevation4-18 MuiAppBar-root-3 MuiAppBar-positionFixed-4 MuiAppBar-colorPrimary-10 mui-fixed"
  >
    <div
      className="MuiToolbar-root-39 MuiToolbar-regular-41 MuiToolbar-gutters-40"
    >
      <p
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorInherit-72 MuiTypography-alignCenter-66 withRouter-RetroAppBar--flex-2"
        type="title"
      >
        <a
          className="MuiButtonBase-root-105 MuiButton-root-79 MuiButton-text-81 MuiButton-flat-84"
          href="/"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-80"
          >
            Retrobox
          </span>
          <span
            className="MuiTouchRipple-root-108"
          />
        </a>
      </p>
      <button
        className="MuiButtonBase-root-105 MuiButton-root-79 MuiButton-text-81 MuiButton-flat-84"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-80"
        >
          This is a buttonText
        </span>
        <span
          className="MuiTouchRipple-root-108"
        />
      </button>
    </div>
  </header>
</div>
`;

exports[`renders correctly if a team link was provided 1`] = `
<div
  className="withRouter-RetroAppBar--root-1"
>
  <header
    className="MuiPaper-root-12 MuiPaper-elevation4-18 MuiAppBar-root-3 MuiAppBar-positionFixed-4 MuiAppBar-colorPrimary-10 mui-fixed"
  >
    <div
      className="MuiToolbar-root-39 MuiToolbar-regular-41 MuiToolbar-gutters-40"
    >
      <p
        className="MuiTypography-root-43 MuiTypography-body1-52 MuiTypography-colorInherit-72 MuiTypography-alignCenter-66 withRouter-RetroAppBar--flex-2"
        type="title"
      >
        <a
          className="MuiButtonBase-root-105 MuiButton-root-79 MuiButton-text-81 MuiButton-flat-84"
          href="/team/Team"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex="0"
        >
          <span
            className="MuiButton-label-80"
          >
            Retrobox
          </span>
          <span
            className="MuiTouchRipple-root-108"
          />
        </a>
      </p>
      <a
        className="MuiButtonBase-root-105 MuiButton-root-79 MuiButton-text-81 MuiButton-flat-84"
        href="/team/Team/list"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiButton-label-80"
        >
          List Team items
        </span>
        <span
          className="MuiTouchRipple-root-108"
        />
      </a>
      <button
        className="MuiButtonBase-root-105 MuiButton-root-79 MuiButton-text-81 MuiButton-flat-84"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-80"
        >
          This is a buttonText
        </span>
        <span
          className="MuiTouchRipple-root-108"
        />
      </button>
    </div>
  </header>
</div>
`;
